# Torch-Crash-Course

./: .gitignore  README.md  autoregressive_explorer.ipynb  main.ipynb  pyproject.toml  slm_explorer.ipynb  torch_crash_course.ipynb
assets/: chars.json  minigpt_weights.pth
data/MNIST/: mnist_loader.py
src/autoregressive_explorer/: __init__.py  backends.py  index.html  model.py  server.py
