[project]
name = "torch-crash-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pytorch-lightning>=2.6.1",
    "requests>=2.32.5",
    "tokenizers>=0.22.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=5.3.0",
]
